--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			烟花模拟器
+			花火
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="mobile-web-app-capable" content="yes">
@@ -46,10 +46,10 @@
 		<div class="container">
 			<div class="loading-init">
 				<div class="loading-init__header">
-					加载中
+					莫慌...
 				</div>
 				<div class="loading-init__status">
-					正在装配烟花
+					正在点燃导火索
 				</div>
 			</div>
 			<div class="stage-container remove">
@@ -91,7 +91,7 @@
 							设置
 						</div>
 						<div class="menu__subheader">
-							若想了解更多信息 请点击任意标签
+							若想设置更多功能 请点击任意标签
 						</div>
 						<form>
 							<div class="form-option form-option--select">
@@ -124,7 +124,7 @@
 							</div>
 							<div class="form-option form-option--select">
 								<label class="scaleFactor-label">
-								缩放
+								缩放百分比
 								</label>
 								<select class="scaleFactor">
 								</select>
@@ -160,18 +160,7 @@
 								<input class="long-exposure" type="checkbox" />
 							</div>
 						</form>
-						<div class="credits">
-							<p class="copyright">
-								您的IP：
-								<script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
-								<script type="text/javascript">document.write(returnCitySN["cip"])</script>
-								<br />
-								<script>
-									var mydate = new Date();
-									document.writeln("Copyright&nbsp;&copy;&nbsp;2021 - " + mydate.getFullYear() + '&nbsp;<a target="_blank" href="https://www.nianbroken.top/">碎念_Nian</a><br />All&nbsp;Rights&nbsp;Reserved');
-								</script>
-							</p>
-						</div>
+						
 					</div>
 				</div>
 			</div>
