--- a/index.html
+++ b/index.html
@@ -160,7 +160,14 @@
 								<input class="long-exposure" type="checkbox" />
 							</div>
 						</form>
-						
+						div class="credits">
+							<p class="copyright">
+								<script>
+									var mydate = new Date();
+									document.writeln("2021 - " + mydate.getFullYear() + '&nbsp;<a target="_blank" href="https://gongjiantao.github.io/gjt/">拾碌</a><br />');
+								</script>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
